ongoing label inclusion and tests improvement
